added new api and connect snowflake..

--- a/column-lineage-api/requirements.txt
+++ b/column-lineage-api/requirements.txt
@@ -4,6 +4,7 @@ pydantic>=2.8.0
 pydantic-settings>=2.4.0
 sqlalchemy>=2.0.43
 sqlmodel>=0.0.25
+snowflake-connector-python>=3.12.0
 snowflake-sqlalchemy>=1.6.0
 pandas>=1.5.3
 numpy>=1.26.4
@@ -18,3 +19,4 @@ redis>=5.0.0
 structlog>=24.1.0
 rich>=13.7.0
 openpyxl>=3.1.0
+python-dotenv>=1.0.0
