now show api data in frontend..

--- a/column-lineage-frontend/.env.example
+++ b/column-lineage-frontend/.env.example
@@ -9,7 +9,7 @@ VITE_API_V1_PREFIX=/api/v1
 # AWS Amplify Configuration - REPLACE WITH YOUR VALUES
 VITE_AWS_REGION=us-east-1
 VITE_AWS_COGNITO_OAUTH_DOMAIN=your-domain.auth.us-east-1.amazoncognito.com
-VITE_SSO_REDIRECT_URI=http://localhost:3000
+VITE_SSO_REDIRECT_URI=http://localhost:3000/
 VITE_AMPLIFY_USERPOOL_ID=us-east-1_XXXXXXXXX
 VITE_AMPLIFY_WEBCLIENT=your-app-client-id
 
