view tcolumn lineagse start analysis

--- a/column-lineage-api/.env.example
+++ b/column-lineage-api/.env.example
@@ -22,8 +22,8 @@ JWT_EXPIRE_MINUTES=30
 
 # AWS Cognito (if using)
 COGNITO_USER_POOL_ID=your_user_pool_id
-COGNITO_CLIENT_ID=your_client_id
-COGNITO_REGION=us-east-1
+COGNITO_APP_CLIENT_ID=your_client_id
+AWS_REGION=us-east-1
 
 # Redis Configuration (for Celery)
 REDIS_URL=redis://localhost:6379/0
