--- a/column-lineage-api/pyproject.toml
+++ b/column-lineage-api/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "pydantic-settings>=2.4.0",
     "sqlalchemy>=2.0.43",
     "sqlmodel>=0.0.25",
+    "snowflake-connector-python>=3.12.0",
     "snowflake-sqlalchemy>=1.6.0",
     "pandas>=1.5.3",
     "numpy>=1.26.4",
@@ -28,6 +29,8 @@ dependencies = [
     "structlog>=24.1.0",
     "rich>=13.7.0",
     "openpyxl>=3.1.0",
+    "python-dotenv>=1.0.0",
+    "requests>=2.31.0",
 ]
 
 [project.optional-dependencies]
