--- a/column-lineage-api/.env.example
+++ b/column-lineage-api/.env.example
@@ -29,6 +29,14 @@ AWS_REGION=us-east-1
 # Redis Configuration (for Celery)
 REDIS_URL=redis://localhost:6379/0
 
+# Auto-save settings
+AUTO_SAVE_RESULTS=true
+AUTO_SAVE_TO_DATABASE=true
+RESULTS_DIRECTORY=analysis_results
+
+# Base View Table Configuration
+BASE_VIEW_TABLE=CPS_DB.CPS_DSCI_BR.BASE_NAMES
+
 # API Configuration
 API_V1_PREFIX=/api/v1
 PROJECT_NAME=Column Lineage API
