--- a/column-lineage-api/pyproject.toml
+++ b/column-lineage-api/pyproject.toml
@@ -31,6 +31,7 @@ dependencies = [
     "openpyxl>=3.1.0",
     "python-dotenv>=1.0.0",
     "requests>=2.31.0",
+    "hvac>=2.4.0",
 ]
 
 [project.optional-dependencies]
