--- a/column-lineage-frontend/.env.template
+++ b/column-lineage-frontend/.env.template
@@ -1,7 +1,7 @@
 # Copy this template and replace with your actual AWS values
 
 # Environment Configuration
-VITE_APP_TITLE=Column Analysis
+VITE_APP_TITLE=Lineage Analysis
 VITE_API_BASE_URL=http://localhost:8000
 VITE_ENV=development
 
