--- a/column-lineage-frontend/buildspec.yml
+++ b/column-lineage-frontend/buildspec.yml
@@ -4,7 +4,7 @@ env:
   variables:
     REPOSITORY_URI: your-ecr-repository-uri
     VITE_API_BASE_URL: http://localhost:8000
-    VITE_APP_TITLE: Column Analysis
+    VITE_APP_TITLE: Lineage Analysis
     VITE_ENV: production
 
 phases:
